<resources>
    <string name="app_name">FlashNote</string>
    <string name="my_decks">My Decks</string>
    <string name="decks_subtitle">Your collection of flashcards</string>
    <string name="new_deck">New Deck</string>
    <string name="my_cards">My Cards</string>
    <string name="new_card">New Card</string>
    <string name="empty_cards_message">No cards yet.\nTap + to add one.</string>
    <string name="label_front">FRONT</string>
    <string name="label_back">BACK</string>
    <string name="card_details_title">Card Details</string>
    <string name="edit">Edit</string>
    <string name="close">Close</string>
    <string name="card_builder_title">Card Builder</string>
    <string name="source_text_label">Source text (OCR):</string>
    <string name="front_label">Front of Card:</string>
    <string name="back_label">Back of Card:</string>
    <string name="hint_front">Enter question or term</string>
    <string name="hint_back">Enter answer or definition</string>
    <string name="done">Done</string>
    <string name="import_cards_title">Import Cards</string>
    <string name="import_description">Choose how you want to add your new flashcards.</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="extract_text">Extract Text</string>
    <string name="custom_text">Custom Text</string>
    <string name="study_deck">Study Deck</string>
    <string name="review_all_cram">Review All (Cram)</string>
    <string name="due_count_format">%1$d cards due today</string>
    <string name="deck_score_format">Deck Score: %1$d%%</string>
    <string name="card_progress_format">Card %1$d of %2$d</string>
    <string name="score_format">Score: %1$d / 4</string>
    <string name="all_caught_up_title">You\'re all caught up for today!</string>
    <string name="all_caught_up_subtitle">To review cards ahead of schedule, go back and use Cram Mode.</string>
    <string name="cards_reviewed_format">Cards Reviewed: %1$d</string>
    <string name="correct_count_format">Correct: %1$d</string>
    <string name="incorrect_count_format">Incorrect: %1$d</string>
    <string name="correct_stat_format">Correct: %1$d</string>
    <string name="needs_review_stat_format">Needs Review: %1$d</string>
</resources>